--- a/screen.css
+++ b/screen.css
@@ -3,7 +3,7 @@ html, body, div, h1, h2, center,fieldset, label, caption,article, footer, header
     margin: 0; 
     padding: 0; 
     border: 0; 
-    font: inherit; 
+    font: Arial, Helvetica, sans-serif; 
     font-size: 100%; 
     vertical-align: baseline; 
 }
@@ -29,7 +29,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, div.title {
-     font-family: "Warnock Pro", "Goudy Old Style", "Palatino", "Book Antiqua", Georgia, serif; 
+     font-family: Arial, Helvetica, sans-serif; 
      text-align: center;
     }
 
