--- a/screen.css
+++ b/screen.css
@@ -117,12 +117,10 @@ fieldset {
     text-align: right; 
 }
  .wrapped {
-    padding: 0 0.5em; 
     width: 55em; 
     text-align: center;
     justify-items: center;
     width:100vw;
-    height:100vh;
  }
 
 
@@ -198,3 +196,23 @@ article header h1 {
          font-size: 1.8em; 
         } 
     }
+/*
+    #tutorial {
+        position: absolute;
+        z-index: 3;
+        background-color: rgba(255, 255, 255, 1);
+        width: 50%;
+        height: 70%;
+        border: 2px solid #34495e;
+        border-radius: 4px;
+        text-align: center;
+        float: right;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+    }*/
